tests/negative/typecheck/positional_select_not_tuple.orng
// positional_select_not_tuple.orng:6:14: error: expected tuple or struct type for positional select, got `[int(3)]Int`
//     let x = [1, 2, 3]
//             ^
// 
fn main() -> Int {
    let x = [1, 2, 3]
    x.[0]
}